--- a/codes/DDA/RecurrenceOfSurgery_DDA.ipynb
+++ b/codes/DDA/RecurrenceOfSurgery_DDA.ipynb
@@ -2859,7 +2859,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_ROS= pd.read_csv('../../datasets/RecurrenceOfSurgery.csv')\n"
+    "#df_ROS= pd.read_csv('../../datasets/RecurrenceOfSurgery.csv')"
    ]
   },
   {
@@ -3017,13 +3017,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "id": "10401002-9cd0-479d-914d-ab8da898ed8f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>혈액형</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>직업</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>건설업</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>공무원</th>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>교사</th>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>군인</th>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>노동직</th>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>농업</th>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>무직</th>\n",
+       "      <td>164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>사무직</th>\n",
+       "      <td>449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>사업가</th>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>예술가</th>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>운동선수</th>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>운수업</th>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>의료직</th>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>자영업</th>\n",
+       "      <td>171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>주부</th>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>특수전문직</th>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>학생</th>\n",
+       "      <td>135</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       혈액형\n",
+       "직업        \n",
+       "건설업     17\n",
+       "공무원     51\n",
+       "교사      30\n",
+       "군인      90\n",
+       "노동직     42\n",
+       "농업      40\n",
+       "무직     164\n",
+       "사무직    449\n",
+       "사업가     39\n",
+       "예술가     10\n",
+       "운동선수    14\n",
+       "운수업     50\n",
+       "의료직     40\n",
+       "자영업    171\n",
+       "주부     114\n",
+       "특수전문직   23\n",
+       "학생     135"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 직업별 혈액형 빈도 구하기\n",
+    "df_ROS.pivot_table(index='직업', values='혈액형', aggfunc=np.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b7e8812-f4bc-46a2-8f4f-75a034c1fcaa",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 직업별 혈액형 빈도 구하기"
-   ]
+   "source": []
   }
  ],
  "metadata": {
