--- a/codes/DDA/RecurrenceOfSurgery_DDA.ipynb
+++ b/codes/DDA/RecurrenceOfSurgery_DDA.ipynb
@@ -2847,16 +2847,19 @@
    "id": "dcdcd2ec-167d-4cf5-9469-3cfd99588182",
    "metadata": {},
    "source": [
-    "### quest2 최종 데이터 사용\n",
+    "### quest3 \n",
+    "- quest2 최종 데이터 사용\n",
     "- 직업별 성별 빈도\n",
     "- 직업별 혈액형 빈도"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "id": "3da07bac-f23e-4403-9db6-77e9ba4abe87",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "#df_ROS= pd.read_csv('../../datasets/RecurrenceOfSurgery.csv')"
@@ -2864,20 +2867,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "id": "1e1113ac-a24b-426b-9d83-d29dfa0571ec",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 223,
-   "id": "5a80decc-91d1-4ca3-bb12-2247f821b382",
+   "execution_count": 235,
+   "id": "be27a9b7-00c9-4474-8d7d-8b5dcd2ae1b5",
    "metadata": {
     "tags": []
    },
@@ -2904,120 +2895,263 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>성별</th>\n",
+       "      <th>신장</th>\n",
+       "      <th>심혈관질환</th>\n",
+       "      <th>체중</th>\n",
+       "      <th>흡연여부</th>\n",
+       "      <th>연령</th>\n",
+       "      <th>직업</th>\n",
+       "      <th>혈액형</th>\n",
+       "      <th>재발여부</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>1</td>\n",
+       "      <td>179</td>\n",
+       "      <td>1</td>\n",
+       "      <td>77.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>사무직</td>\n",
+       "      <td>RH+B</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>1</td>\n",
+       "      <td>173</td>\n",
+       "      <td>0</td>\n",
+       "      <td>73.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>사무직</td>\n",
+       "      <td>RH+O</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>1</td>\n",
+       "      <td>182</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>사무직</td>\n",
+       "      <td>RH+A</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>1</td>\n",
+       "      <td>185</td>\n",
+       "      <td>0</td>\n",
+       "      <td>82.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>사무직</td>\n",
+       "      <td>RH+O</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>1</td>\n",
+       "      <td>171</td>\n",
+       "      <td>0</td>\n",
+       "      <td>72.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>자영업</td>\n",
+       "      <td>RH+A</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1830</th>\n",
+       "      <td>1</td>\n",
+       "      <td>176</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32</td>\n",
+       "      <td>자영업</td>\n",
+       "      <td>RH+O</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1841</th>\n",
+       "      <td>1</td>\n",
+       "      <td>175</td>\n",
+       "      <td>0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32</td>\n",
+       "      <td>자영업</td>\n",
+       "      <td>RH+A</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1855</th>\n",
+       "      <td>1</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>사무직</td>\n",
+       "      <td>RH+B</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1871</th>\n",
+       "      <td>1</td>\n",
+       "      <td>177</td>\n",
+       "      <td>0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>47</td>\n",
+       "      <td>사무직</td>\n",
+       "      <td>RH+B</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1892</th>\n",
+       "      <td>1</td>\n",
+       "      <td>177</td>\n",
+       "      <td>0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>사무직</td>\n",
+       "      <td>RH+A</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>164 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      성별   신장  심혈관질환    체중  흡연여부  연령   직업   혈액형  재발여부\n",
+       "23     1  179      1  77.8     0  42  사무직  RH+B     0\n",
+       "30     1  173      0  73.3     0  52  사무직  RH+O     0\n",
+       "40     1  182      0  80.2     0  50  사무직  RH+A     1\n",
+       "53     1  185      0  82.7     0  40  사무직  RH+O     0\n",
+       "72     1  171      0  72.1     0  30  자영업  RH+A     0\n",
+       "...   ..  ...    ...   ...   ...  ..  ...   ...   ...\n",
+       "1830   1  176      0  80.0     0  32  자영업  RH+O     0\n",
+       "1841   1  175      0  99.0     0  32  자영업  RH+A     1\n",
+       "1855   1  187      0  74.0     0  29  사무직  RH+B     0\n",
+       "1871   1  177      0  82.0     0  47  사무직  RH+B     0\n",
+       "1892   1  177      0  77.0     0  29  사무직  RH+A     0\n",
+       "\n",
+       "[164 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ROS_quest2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "1e1113ac-a24b-426b-9d83-d29dfa0571ec",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "5a80decc-91d1-4ca3-bb12-2247f821b382",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>성별</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>직업</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>건설업</th>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>공무원</th>\n",
-       "      <td>51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>교사</th>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>군인</th>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>노동직</th>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>농업</th>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>무직</th>\n",
-       "      <td>164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>사무직</th>\n",
-       "      <td>449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>사업가</th>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>예술가</th>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>운동선수</th>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>운수업</th>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>의료직</th>\n",
-       "      <td>40</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>자영업</th>\n",
-       "      <td>171</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주부</th>\n",
-       "      <td>114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>특수전문직</th>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>학생</th>\n",
-       "      <td>135</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        성별\n",
-       "직업        \n",
-       "건설업     17\n",
-       "공무원     51\n",
-       "교사      30\n",
-       "군인      90\n",
-       "노동직     42\n",
-       "농업      40\n",
-       "무직     164\n",
-       "사무직    449\n",
-       "사업가     39\n",
-       "예술가     10\n",
-       "운동선수    14\n",
-       "운수업     50\n",
-       "의료직     40\n",
-       "자영업    171\n",
-       "주부     114\n",
-       "특수전문직   23\n",
-       "학생     135"
+       "성별       1    2\n",
+       "직업             \n",
+       "사무직  121.0  4.0\n",
+       "자영업   39.0  NaN"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 직업별 성별 빈도 구하기\n",
-    "df_ROS.pivot_table(index='직업', values='성별', aggfunc=np.size)"
+    "df_ROS_quest2.pivot_table(index='직업', columns='성별', aggfunc='size')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 238,
    "id": "10401002-9cd0-479d-914d-ab8da898ed8f",
    "metadata": {
     "tags": []
@@ -3043,117 +3177,54 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
        "      <th>혈액형</th>\n",
+       "      <th>RH+A</th>\n",
+       "      <th>RH+AB</th>\n",
+       "      <th>RH+B</th>\n",
+       "      <th>RH+O</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>직업</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>건설업</th>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>공무원</th>\n",
-       "      <td>51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>교사</th>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>군인</th>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>노동직</th>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>농업</th>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>무직</th>\n",
-       "      <td>164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>사무직</th>\n",
-       "      <td>449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>사업가</th>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>예술가</th>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>운동선수</th>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>운수업</th>\n",
        "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>의료직</th>\n",
-       "      <td>40</td>\n",
+       "      <td>13</td>\n",
+       "      <td>24</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>자영업</th>\n",
-       "      <td>171</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주부</th>\n",
-       "      <td>114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>특수전문직</th>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>학생</th>\n",
-       "      <td>135</td>\n",
+       "      <td>21</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       혈액형\n",
-       "직업        \n",
-       "건설업     17\n",
-       "공무원     51\n",
-       "교사      30\n",
-       "군인      90\n",
-       "노동직     42\n",
-       "농업      40\n",
-       "무직     164\n",
-       "사무직    449\n",
-       "사업가     39\n",
-       "예술가     10\n",
-       "운동선수    14\n",
-       "운수업     50\n",
-       "의료직     40\n",
-       "자영업    171\n",
-       "주부     114\n",
-       "특수전문직   23\n",
-       "학생     135"
+       "혈액형  RH+A  RH+AB  RH+B  RH+O\n",
+       "직업                          \n",
+       "사무직    50     13    24    38\n",
+       "자영업    21      3     8     7"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 직업별 혈액형 빈도 구하기\n",
-    "df_ROS.pivot_table(index='직업', values='혈액형', aggfunc=np.size)"
+    "df_ROS_quest2.pivot_table(index='직업', columns='혈액형', aggfunc='size')"
    ]
   },
   {
