--- a/codes/DDA/RecurrenceOfSurgery_DDA.ipynb
+++ b/codes/DDA/RecurrenceOfSurgery_DDA.ipynb
@@ -3071,16 +3071,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
-   "id": "1e1113ac-a24b-426b-9d83-d29dfa0571ec",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 239,
    "id": "5a80decc-91d1-4ca3-bb12-2247f821b382",
    "metadata": {
@@ -3229,8 +3219,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 240,
    "id": "0b7e8812-f4bc-46a2-8f4f-75a034c1fcaa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 164 entries, 23 to 1892\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   성별      164 non-null    int64  \n",
+      " 1   신장      164 non-null    int64  \n",
+      " 2   심혈관질환   164 non-null    int64  \n",
+      " 3   체중      164 non-null    float64\n",
+      " 4   흡연여부    164 non-null    int64  \n",
+      " 5   연령      164 non-null    int64  \n",
+      " 6   직업      164 non-null    object \n",
+      " 7   혈액형     164 non-null    object \n",
+      " 8   재발여부    164 non-null    int64  \n",
+      "dtypes: float64(1), int64(6), object(2)\n",
+      "memory usage: 12.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_ROS_quest2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30dec3ce-8e8c-400b-af77-c8d5437f8fb7",
    "metadata": {},
    "outputs": [],
    "source": []
