--- a/codes/DDA/RecurrenceOfSurgery_Doctors_DDA.ipynb
+++ b/codes/DDA/RecurrenceOfSurgery_Doctors_DDA.ipynb
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "047e26e1-a1c0-422f-a30c-ab8870f6acc9",
    "metadata": {
     "tags": []
@@ -509,7 +509,7 @@
        "      <th></th>\n",
        "      <th>간질성폐질환</th>\n",
        "      <th>심혈관질환</th>\n",
-       "      <th>빈혈여부</th>\n",
+       "      <th>연령</th>\n",
        "      <th>과거수술횟수</th>\n",
        "      <th>수술기법</th>\n",
        "      <th>수술시간</th>\n",
@@ -520,7 +520,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>66</td>\n",
        "      <td>0</td>\n",
        "      <td>TELD</td>\n",
        "      <td>68.0</td>\n",
@@ -529,7 +529,7 @@
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>47</td>\n",
        "      <td>0</td>\n",
        "      <td>TELD</td>\n",
        "      <td>31.0</td>\n",
@@ -538,7 +538,7 @@
        "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>39</td>\n",
        "      <td>1</td>\n",
        "      <td>TELD</td>\n",
        "      <td>78.0</td>\n",
@@ -547,7 +547,7 @@
        "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>40</td>\n",
        "      <td>0</td>\n",
        "      <td>TELD</td>\n",
        "      <td>73.0</td>\n",
@@ -556,7 +556,7 @@
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>42</td>\n",
        "      <td>0</td>\n",
        "      <td>TELD</td>\n",
        "      <td>29.0</td>\n",
@@ -565,7 +565,7 @@
        "      <th>5</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>60</td>\n",
        "      <td>2</td>\n",
        "      <td>TELD</td>\n",
        "      <td>47.0</td>\n",
@@ -574,7 +574,7 @@
        "      <th>6</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>47</td>\n",
        "      <td>0</td>\n",
        "      <td>TELD</td>\n",
        "      <td>7.0</td>\n",
@@ -583,7 +583,7 @@
        "      <th>7</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>55</td>\n",
        "      <td>0</td>\n",
        "      <td>TELD</td>\n",
        "      <td>85.0</td>\n",
@@ -592,7 +592,7 @@
        "      <th>8</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>52</td>\n",
        "      <td>0</td>\n",
        "      <td>TELD</td>\n",
        "      <td>49.0</td>\n",
@@ -601,7 +601,7 @@
        "      <th>9</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>79</td>\n",
        "      <td>0</td>\n",
        "      <td>TELD</td>\n",
        "      <td>59.0</td>\n",
@@ -611,26 +611,26 @@
        "</div>"
       ],
       "text/plain": [
-       "   간질성폐질환  심혈관질환  빈혈여부  과거수술횟수  수술기법  수술시간\n",
-       "0       0      0     0       0  TELD  68.0\n",
-       "1       0      0     0       0  TELD  31.0\n",
-       "2       0      0     0       1  TELD  78.0\n",
-       "3       0      0     0       0  TELD  73.0\n",
-       "4       0      0     0       0  TELD  29.0\n",
-       "5       0      0     0       2  TELD  47.0\n",
-       "6       0      0     0       0  TELD   7.0\n",
-       "7       0      0     0       0  TELD  85.0\n",
-       "8       0      0     0       0  TELD  49.0\n",
-       "9       0      0     0       0  TELD  59.0"
+       "   간질성폐질환  심혈관질환  연령  과거수술횟수  수술기법  수술시간\n",
+       "0       0      0  66       0  TELD  68.0\n",
+       "1       0      0  47       0  TELD  31.0\n",
+       "2       0      0  39       1  TELD  78.0\n",
+       "3       0      0  40       0  TELD  73.0\n",
+       "4       0      0  42       0  TELD  29.0\n",
+       "5       0      0  60       2  TELD  47.0\n",
+       "6       0      0  47       0  TELD   7.0\n",
+       "7       0      0  55       0  TELD  85.0\n",
+       "8       0      0  52       0  TELD  49.0\n",
+       "9       0      0  79       0  TELD  59.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_ROS_doctors = df_ROS[['간질성폐질환','심혈관질환','빈혈여부','과거수술횟수','수술기법','수술시간']]\n",
+    "df_ROS_doctors = df_ROS[['간질성폐질환','심혈관질환','연령','과거수술횟수','수술기법','수술시간']]\n",
     "df_ROS_doctors.head(10)"
    ]
   },
