--- a/codes/DDA/RecurrenceOfSurgery_Doctors_DDA.ipynb
+++ b/codes/DDA/RecurrenceOfSurgery_Doctors_DDA.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "5ef945b5-2378-4922-b680-26aa9b73493e",
    "metadata": {
     "tags": []
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "6155a9a2-9b41-446e-ab01-dc3cb158da3b",
    "metadata": {
     "tags": []
@@ -390,7 +390,7 @@
        "[1894 rows x 52 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "a50b4245-0255-41e3-bebd-8095a2cd2f8d",
    "metadata": {
     "tags": []
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "047e26e1-a1c0-422f-a30c-ab8870f6acc9",
    "metadata": {
     "tags": []
@@ -562,76 +562,89 @@
        "      <td>29.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>60</td>\n",
-       "      <td>2</td>\n",
-       "      <td>TELD</td>\n",
-       "      <td>47.0</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>1889</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>47</td>\n",
+       "      <td>59</td>\n",
        "      <td>0</td>\n",
-       "      <td>TELD</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>80.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>1890</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>55</td>\n",
+       "      <td>42</td>\n",
        "      <td>0</td>\n",
-       "      <td>TELD</td>\n",
-       "      <td>85.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>1891</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>52</td>\n",
+       "      <td>61</td>\n",
        "      <td>0</td>\n",
-       "      <td>TELD</td>\n",
-       "      <td>49.0</td>\n",
+       "      <td>IELD</td>\n",
+       "      <td>50.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>1892</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>79</td>\n",
+       "      <td>29</td>\n",
        "      <td>0</td>\n",
-       "      <td>TELD</td>\n",
-       "      <td>59.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1893</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1894 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   간질성폐질환  심혈관질환  연령  과거수술횟수  수술기법  수술시간\n",
-       "0       0      0  66       0  TELD  68.0\n",
-       "1       0      0  47       0  TELD  31.0\n",
-       "2       0      0  39       1  TELD  78.0\n",
-       "3       0      0  40       0  TELD  73.0\n",
-       "4       0      0  42       0  TELD  29.0\n",
-       "5       0      0  60       2  TELD  47.0\n",
-       "6       0      0  47       0  TELD   7.0\n",
-       "7       0      0  55       0  TELD  85.0\n",
-       "8       0      0  52       0  TELD  49.0\n",
-       "9       0      0  79       0  TELD  59.0"
+       "      간질성폐질환  심혈관질환  연령  과거수술횟수  수술기법  수술시간\n",
+       "0          0      0  66       0  TELD  68.0\n",
+       "1          0      0  47       0  TELD  31.0\n",
+       "2          0      0  39       1  TELD  78.0\n",
+       "3          0      0  40       0  TELD  73.0\n",
+       "4          0      0  42       0  TELD  29.0\n",
+       "...      ...    ...  ..     ...   ...   ...\n",
+       "1889       0      0  59       0   NaN  80.0\n",
+       "1890       0      0  42       0   NaN  20.0\n",
+       "1891       0      0  61       0  IELD  50.0\n",
+       "1892       0      0  29       0   NaN  25.0\n",
+       "1893       0      0  30       0   NaN  45.0\n",
+       "\n",
+       "[1894 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_ROS_doctors = df_ROS[['간질성폐질환','심혈관질환','연령','과거수술횟수','수술기법','수술시간']]\n",
-    "df_ROS_doctors.head(10)"
+    "df_ROS_doctors"
    ]
   },
   {
