--- a/codes/DDA/RecurrenceOfSurgery_DDA.ipynb
+++ b/codes/DDA/RecurrenceOfSurgery_DDA.ipynb
@@ -1989,7 +1989,7 @@
     "tags": []
    },
    "source": [
-    "## quest\n",
+    "### quest1\n",
     "- 정렬 : 혈액형(ascending), 직업 (descending)\n",
     "- 추출 : 혈액형, 직업, 성별 --> 표시"
    ]
