--- a/codes/DDA/RecurrenceOfSurgery_Doctors_DDA.ipynb
+++ b/codes/DDA/RecurrenceOfSurgery_Doctors_DDA.ipynb
@@ -5,6 +5,7 @@
    "id": "484521cb-cd1b-4352-a918-38c01d5881ab",
    "metadata": {},
    "source": [
+    "### queset4        \n",
     "- 분석 제공 대상이 의사\n",
     "- 목표 변수 : '수술시간'\n",
     "- 설명 변수 지정 최소 5개 이상(범주형과 연속형 섞여 있음)\n",
@@ -15,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "5ef945b5-2378-4922-b680-26aa9b73493e",
    "metadata": {
     "tags": []
