--- a/codes/pandass/TypeOfContractChannel.ipynb
+++ b/codes/pandass/TypeOfContractChannel.ipynb
@@ -565,7 +565,7 @@
     }
    ],
    "source": [
-    "df_CC.describe()"
+    "df_CC.describe() # 수치형 "
    ]
   },
   {
@@ -686,7 +686,7 @@
     }
    ],
    "source": [
-    "df_CC.describe(include=object) "
+    "df_CC.describe(include=object) # 명목형"
    ]
   },
   {
@@ -720,7 +720,7 @@
     }
    ],
    "source": [
-    "df_CC['id'].value_counts()"
+    "df_CC['id'].value_counts() # 값 내림차순순위"
    ]
   },
   {
@@ -1006,7 +1006,7 @@
     }
    ],
    "source": [
-    "df_CC['amount'].unique()"
+    "df_CC['amount'].unique() "
    ]
   },
   {
