--- a/codes/pandass/begginners.ipynb
+++ b/codes/pandass/begginners.ipynb
@@ -33,21 +33,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a6d70311-5432-4f99-8797-daa42e959917",
+   "cell_type": "markdown",
+   "id": "3fe7fab2-273a-4181-876f-581a3e63050d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
     "### DataFrame 구조\n",
-    "#- index(row) - coulmn(column) - data"
+    "- index(row) - coulmn(column) - data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7cd1b499-579a-45e9-9eb5-953b158bcf72",
    "metadata": {
     "tags": []
@@ -111,7 +109,7 @@
        "4  50"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4de2b370-b4cb-4971-b44f-2ca677c03463",
    "metadata": {
     "tags": []
@@ -197,7 +195,7 @@
        "3  1000     과자  2019-12-31  반품"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5acf03eb-ec63-4c3c-94a9-758ab75e27f7",
    "metadata": {
     "tags": []
@@ -286,7 +284,7 @@
        "3  1000     과자  2019-12-31   반품"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "05e4f22c-b8f7-4fef-b655-1bfc488d951e",
    "metadata": {
     "tags": []
@@ -313,7 +311,7 @@
        " ['가격', '종류', '판매일자', '반품여부'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ccba96f6-246a-4760-891b-fe7ce829b992",
    "metadata": {},
    "outputs": [
@@ -334,7 +332,7 @@
        "RangeIndex(start=0, stop=4, step=1)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "99d0125a-a598-4e0b-8273-bc528a8c7319",
    "metadata": {
     "tags": []
@@ -360,7 +358,7 @@
        "       [1000, '과자', '2019-12-31', '반품']], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "222e6c07-b0b9-4f20-af74-572bc8024341",
    "metadata": {
     "tags": []
@@ -384,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "77acaa61-8d8e-4b6e-a67d-03ba4de913cf",
    "metadata": {
     "tags": []
@@ -448,7 +446,7 @@
        "3  1000   반품"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "b1129687-20c9-4f60-b6b7-49f95b31eca2",
    "metadata": {
     "tags": []
@@ -505,7 +503,7 @@
        "2  3000   정상"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "c40097e3-f5ce-44a5-baf7-51015adba29e",
    "metadata": {
     "tags": []
@@ -535,7 +533,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "fd06a49e-bca8-41f8-be22-be04a68ead88",
    "metadata": {
     "tags": []
@@ -601,7 +599,7 @@
        "정상    2000"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,157 +609,55 @@
     "# df_salesdays_dropcol.pivot_table(index='반품여부', values ='가격')\n",
     "# pd.pivot_table(data=df_salesdays_dropcol, index='반품여부', values ='가격')\n",
     "import numpy as np\n",
-    "df_salesdays_dropcol.pivot_table(index='반품여부', values ='가격', aggfunc=np.min)"
+    "df_salesdays_dropcol.pivot_table(index='반품여부', values ='가격', aggfunc= 'min')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "0fd15798-7214-4fc6-8100-584e48a3c8bf",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>가격</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>반품여부</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>반품</th>\n",
-       "      <td>1000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>정상</th>\n",
-       "      <td>2500</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        가격\n",
-       "반품여부      \n",
-       "반품    1000\n",
-       "정상    2500"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df_saledays' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf_saledays\u001b[49m\u001b[38;5;241m.\u001b[39mpivot_table(index\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m반품여부\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m종류\u001b[39m\u001b[38;5;124m'\u001b[39m], values\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m가격\u001b[39m\u001b[38;5;124m'\u001b[39m, aggfunc\u001b[38;5;241m=\u001b[39m[np\u001b[38;5;241m.\u001b[39msum, np\u001b[38;5;241m.\u001b[39mmin, np\u001b[38;5;241m.\u001b[39msize])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_saledays' is not defined"
+     ]
     }
    ],
    "source": [
-    "pd.pivot_table(data=df_salesdays_dropcol, index='반품여부', values ='가격')"
+    "df_saledays.pivot_table(index=['반품여부', '종류'], values='가격', aggfunc=[np.sum, np.min, np.size])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "4db4871c-9cc9-4032-a14f-973f7cddd238",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>가격</th>\n",
-       "      <th>종류</th>\n",
-       "      <th>판매일자</th>\n",
-       "      <th>반품여부</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>과자</td>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>반품</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>음료</td>\n",
-       "      <td>2020-03-02</td>\n",
-       "      <td>정상</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3000</td>\n",
-       "      <td>아이스크림</td>\n",
-       "      <td>2020-02-03</td>\n",
-       "      <td>정상</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>과자</td>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>반품</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     가격     종류        판매일자 반품여부\n",
-       "0  1000     과자  2019-12-31   반품\n",
-       "1  2000     음료  2020-03-02   정상\n",
-       "2  3000  아이스크림  2020-02-03   정상\n",
-       "3  1000     과자  2019-12-31   반품"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df_saledays' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf_saledays\u001b[49m\u001b[38;5;241m.\u001b[39minfo()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_saledays' is not defined"
+     ]
     }
    ],
    "source": [
-    "df_salesdays"
+    "df_saledays.info()"
    ]
   },
   {
@@ -963,6 +859,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e0bd19e-cb40-4792-a81f-dbd5e82dfb7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_salesdaysdf_salesdays['가격'] + ['가격차이']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b18723fa-28dd-44be-a643-7fc7fed116d2",
    "metadata": {
@@ -1085,6 +991,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f9f29f2-ce3e-4ee4-9836-027eb4fe7334",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.size(arr)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ee2f8283-3931-40e7-94d3-56d82b2eb26e",
    "metadata": {},
@@ -1102,6 +1018,7 @@
    "outputs": [],
    "source": [
     " # numpy : 다차원 배열과 행렬 연산을 지원하여 수치 계산 및 데이터 분석\n",
+    " # IQR은 데이터의 중앙 50% 범위를 측정하므로 이상치(Outliers)를 식별하거나 데이터 분포의 특성을 이해하는 데 유용   \n",
     "import numpy as np  \n",
     "data = np.array([44, 32, 53, 75, 36, 45, 25, 49, 46, 28])"
    ]
