--- a/codes/EDA/TitanicFromDisaster_train_EDA_quest.ipynb
+++ b/codes/EDA/TitanicFromDisaster_train_EDA_quest.ipynb
@@ -679,18 +679,18 @@
    "metadata": {},
    "source": [
     "### 상관관계 확인\n",
-    "- 목표변수 : 'Survived' \n",
+    "- 목표변수 : 'Survived' 승객생존여부 \n",
     "- 설명변수 :\n",
-    "  - 'Pclass', 승객의 객실 등급: 2등급의 생존이 상대적으로 높음\n",
-    "  - 'Sex', 성별: female가 Survived 높은 것 같다. \n",
-    "  - 'SibSp', 함께 탑승한 형제자매 또는 배우자의 수: 0명 보다 1-2명일 때 생존이 상대적으로 높음\n",
-    "  - 'Parch', 함께 탑승한 부모나 자녀의 수: Parch가 많을수록 생존이 상대적으로 높음 \n",
-    "  - 'Fare', 지불한 요금: fare 차이 따라 분포 변화 영향을 줌\n",
-    "  - 'Cabin', 객실 번호: 차이에 여부 확인 필요(확증 데이터 분석),  \n",
+    "  - 'Pclass' 승객의 객실 등급: 2등급의 생존이 상대적으로 높음\n",
+    "  - 'Sex' 성별: female가 Survived 높은 것 같다. \n",
+    "  - 'SibSp' 함께 탑승한 형제자매 또는 배우자의 수: 0명 보다 1-2명일 때 생존이 상대적으로 높음\n",
+    "  - 'Parch' 함께 탑승한 부모나 자녀의 수: Parch가 많을수록 생존이 상대적으로 높음 \n",
+    "  - 'Fare' 지불한 요금: fare 차이 따라 분포 변화 영향을 줌\n",
+    "  - 'Cabin' 객실 번호: 차이에 여부 확인 필요(확증 데이터 분석),  \n",
     "  - 'Embarked' 탑승한 항구를 나타내는 열 :  C항구 생존이 상대적으로 높음\n",
     "\n",
-    "\n",
-    "- 분석 스토리 : 설명변수'Pclass'는 2등급일 때 'Sex'는 female일 때,'SibSp'는 형제자매 또는 배우자수가 있을때 ,'Parch'는 가족 구성원이 많을수록 ,'Fare'는 요금이 높을 수록'Embarked' 탑승 항구가 C항구일 때 목표변수 'Survived'와의 상관관계에서 생존여부가 높은 것을 확인할 수 있다. "
+    "- 분석 스토리 : 분석 결과를 종합하여 설명 변수들과 목표 변수인 'Survived' 간의 상관관계를 해석할 수 있다.\n",
+    "2등급 승객, 여성 승객, 형제자매 또는 배우자가 있는 승객, 가족 구성원이 많은 승객, 높은 요금을 지불한 승객, C항구에서 탑승한 승객이 생존 여부에 높은 영향을 미치는 것을 확인할 수 있다. "
    ]
   },
   {
