분석 스토리 수정

--- a/codes/EDA/TitanicFromDisaster_train_EDA_quest.ipynb
+++ b/codes/EDA/TitanicFromDisaster_train_EDA_quest.ipynb
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 117,
    "id": "f6445cad-8abf-4e69-a600-6f2fd73425d8",
    "metadata": {
     "tags": []
@@ -409,12 +409,13 @@
        "2       3  female      0      0   7.9250   NaN        S         1"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 전처리\n",
     "# 열 단위 추출 \n",
     "df_TT_T = df_TT[['Pclass','Sex','SibSp','Parch', 'Fare', 'Cabin','Embarked','Survived']]\n",
     "df_TT_T.head(3)"
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 118,
    "id": "342e1015-4845-457e-9eb2-bc4748a63e7e",
    "metadata": {
     "tags": []
@@ -456,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 119,
    "id": "c87a019c-96d3-478b-852f-cf112dbff89c",
    "metadata": {
     "tags": []
@@ -468,7 +469,7 @@
        "<Axes: xlabel='Fare'>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 120,
    "id": "21fec0c6-0711-4d68-99ed-c39907b5136b",
    "metadata": {
     "tags": []
@@ -509,20 +510,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## 전처리: 대상 컬럼 의한 레코드 삭제시 dataset 양 고려\n",
-    "df_TT_T_dropna = df_TT_T.dropna()\n",
+    "df_TT_T_dropna = df_TT_T.dropna() # 결측치 제거\n",
     "df_TT_T_dropna.isnull().sum() # 결측치 확인"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 121,
    "id": "408164ae-f9e1-4492-ac6f-556228203168",
    "metadata": {
     "tags": []
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 122,
    "id": "391c2361-b46c-4a05-be8f-34175907cc52",
    "metadata": {
     "tags": []
@@ -550,7 +550,7 @@
        "(28.959374999999998, 89.77605, 60.816675000000004)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 123,
    "id": "80d5742d-37dd-47db-856a-f057f3f13000",
    "metadata": {
     "tags": []
@@ -573,7 +573,7 @@
        "(-62.26563750000001, 181.0010625)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 124,
    "id": "ad0fe1df-93dc-4b06-963e-a127b4692105",
    "metadata": {
     "tags": []
@@ -609,7 +609,7 @@
        "Name: Fare, Length: 202, dtype: bool"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 125,
    "id": "8ddd3d7d-ecdb-434b-beb4-e4df88911713",
    "metadata": {
     "tags": []
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 126,
    "id": "a88b22ec-887d-4d0d-bc62-03641b65d351",
    "metadata": {
     "tags": []
@@ -646,7 +646,7 @@
        "<Axes: xlabel='Fare'>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -662,16 +662,9 @@
     }
    ],
    "source": [
+    "# 이상치 제거 확인 \n",
     "sns.boxplot(df_TT_T_dropna_condition, x='Fare')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2689c239-3416-47d3-ba39-0e1fa79f8ba4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -679,18 +672,22 @@
    "metadata": {},
    "source": [
     "### 상관관계 확인\n",
-    "- 목표변수 : 'Survived' 승객생존여부 \n",
+    "- 목표변수 : 'Survived' 승객생존여부 | 분포 : unbalanced : 생존자보다 사망자가 더 많음. \n",
     "- 설명변수 :\n",
+    "  \n",
+    "  (연속형)\n",
+    "  - 'SibSp' 함께 탑승한 형제자매 또는 배우자의 수: 0명 보다 1-2명일 때 생존이 상대적으로 높음, 확증 데이터 분석 필요\n",
+    "  - 'Parch' 함께 탑승한 부모나 자녀의 수: Parch가 많을수록 생존이 상대적으로 높음, 확증 데이터 분석 필요 \n",
+    "  - 'Fare' 지불한 요금: fare가 높을수록 생존이 상대적으로 높음 \n",
+    "  - 'Cabin' 객실 번호: 'B96 B98' 객실 승객 생존이 상대적으로 높음, 확증 데이터 분석 필요\n",
+    "  \n",
+    "  (범주형)\n",
     "  - 'Pclass' 승객의 객실 등급: 2등급의 생존이 상대적으로 높음\n",
-    "  - 'Sex' 성별: female가 Survived 높은 것 같다. \n",
-    "  - 'SibSp' 함께 탑승한 형제자매 또는 배우자의 수: 0명 보다 1-2명일 때 생존이 상대적으로 높음\n",
-    "  - 'Parch' 함께 탑승한 부모나 자녀의 수: Parch가 많을수록 생존이 상대적으로 높음 \n",
-    "  - 'Fare' 지불한 요금: fare 차이 따라 분포 변화 영향을 줌\n",
-    "  - 'Cabin' 객실 번호: 차이에 여부 확인 필요(확증 데이터 분석),  \n",
+    "  - 'Sex' 성별: female가 생존이 상대적으로 높음 \n",
     "  - 'Embarked' 탑승한 항구를 나타내는 열 :  C항구 생존이 상대적으로 높음\n",
     "\n",
     "- 분석 스토리 : 분석 결과를 종합하여 설명 변수들과 목표 변수인 'Survived' 간의 상관관계를 해석할 수 있다.\n",
-    "2등급 승객, 여성 승객, 형제자매 또는 배우자가 있는 승객, 가족 구성원이 많은 승객, 높은 요금을 지불한 승객, C항구에서 탑승한 승객이 생존 여부에 높은 영향을 미치는 것을 확인할 수 있다. "
+    "2등급 승객, 여성 승객, 높은 요금을 지불한 승객, C항구에서 탑승한 승객이 생존에 높은 영향을 미치는 것을 확인할 수 있다. 'B96 B98'객실 승객, 형제자매 또는 배우자가 있는 승객, 부모나 자녀의 수가 많은 승객도 상대적으로 생존여부와 관련이 있는 것으로 확인되었지만 확증 데이터 분석을 통해 더욱 결과를 강화할 필요성이 있다. "
    ]
   },
   {
@@ -723,8 +720,7 @@
     }
    ],
    "source": [
-    "### 데이터 타입과 분포\n",
-    "## 목표 변수 : \n",
+    "# 목표 변수 : \n",
     "sns.countplot(data=df_TT_T_dropna_condition, x='Survived')"
    ]
   },
