--- a/codes/EDA/TitanicFromDisaster_train_EDA_quest.ipynb
+++ b/codes/EDA/TitanicFromDisaster_train_EDA_quest.ipynb
@@ -415,7 +415,6 @@
     }
    ],
    "source": [
-    "# 전처리\n",
     "# 열 단위 추출 \n",
     "df_TT_T = df_TT[['Pclass','Sex','SibSp','Parch', 'Fare', 'Cabin','Embarked','Survived']]\n",
     "df_TT_T.head(3)"
@@ -675,13 +674,10 @@
     "- 목표변수 : 'Survived' 승객생존여부 | 분포 : unbalanced : 생존자보다 사망자가 더 많음. \n",
     "- 설명변수 :\n",
     "  \n",
-    "  (연속형)\n",
     "  - 'SibSp' 함께 탑승한 형제자매 또는 배우자의 수: 0명 보다 1-2명일 때 생존이 상대적으로 높음, 확증 데이터 분석 필요\n",
     "  - 'Parch' 함께 탑승한 부모나 자녀의 수: Parch가 많을수록 생존이 상대적으로 높음, 확증 데이터 분석 필요 \n",
     "  - 'Fare' 지불한 요금: fare가 높을수록 생존이 상대적으로 높음 \n",
     "  - 'Cabin' 객실 번호: 'B96 B98' 객실 승객 생존이 상대적으로 높음, 확증 데이터 분석 필요\n",
-    "  \n",
-    "  (범주형)\n",
     "  - 'Pclass' 승객의 객실 등급: 2등급의 생존이 상대적으로 높음\n",
     "  - 'Sex' 성별: female가 생존이 상대적으로 높음 \n",
     "  - 'Embarked' 탑승한 항구를 나타내는 열 :  C항구 생존이 상대적으로 높음\n",
@@ -767,7 +763,7 @@
     }
    ],
    "source": [
-    "# object 변환 대상 : 범주형으로 볼 수 있는 것 \n",
+    "# object 변환: 'Pclass','SibSp','Parch','Survived' (범주형으로 볼 수 있는 것 )\n",
     "df_TT_T_dropna_condition[['Pclass','SibSp','Parch','Survived']] = df_TT_T_dropna_condition[['Pclass','SibSp','Parch','Survived']].astype(object)\n",
     "df_TT_T_dropna_condition.info()"
    ]
