--- a/codes/pandass/ResurrenceOfSurgery_TimeSeries_quest.ipynb
+++ b/codes/pandass/ResurrenceOfSurgery_TimeSeries_quest.ipynb
@@ -842,13 +842,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "5d9be23f-70e5-4de5-a54a-21aeb5d98c05",
+   "cell_type": "markdown",
+   "id": "60cb2101-c0af-4667-8434-6df2f3da9779",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
     "### 주차별 환자 입원/퇴원 추이 시각화 및 인사이트 2차 방법 (단순 시각화) "
    ]
@@ -887,13 +885,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "d189121c-85ec-4314-ba5c-26423f4f80ae",
+   "cell_type": "markdown",
+   "id": "97318339-1213-4618-955e-5bdef6f7564f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
     "### 요일별 환자 입원/퇴원 추이 시각화 및 인사이트 1차 방법 (2차 데이터 사용시)"
    ]
@@ -947,13 +943,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6be38d29-c1a3-4141-9ff9-daf64df1e5bb",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "8b35411f-6308-4d7b-8157-34fe11155a26",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### 주차별 환자 입원/퇴원 추이 시각화 및 인사이트 2차 방법 (단순 시각화) "
+    "### 요일별 환자 입원/퇴원 추이 시각화 및 인사이트 2차 방법 (단순 시각화) "
    ]
   },
   {
