--- a/codes/pandass/ResurrenceOfSurgery_TimeSeries_quest.ipynb
+++ b/codes/pandass/ResurrenceOfSurgery_TimeSeries_quest.ipynb
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 109,
    "id": "987746ff-751b-46f3-84ee-7ea450c8a2d5",
    "metadata": {
     "tags": []
@@ -572,36 +572,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          입원일자      퇴원일자\n",
-      "0     20190713  20190716\n",
-      "1     20190715  20190716\n",
-      "2     20190729  20190801\n",
-      "3     20190731  20190803\n",
-      "4     20190903  20190907\n",
-      "...        ...       ...\n",
-      "1889  20170407  20170408\n",
-      "1890  20170426  20170429\n",
-      "1891  20170410  20170412\n",
-      "1892  20170408  20170411\n",
-      "1893  20170412  20170413\n",
+      "        환자ID      입원일자      퇴원일자\n",
+      "0        1PT  20190713  20190716\n",
+      "1        2PT  20190715  20190716\n",
+      "2        3PT  20190729  20190801\n",
+      "3        4PT  20190731  20190803\n",
+      "4        5PT  20190903  20190907\n",
+      "...      ...       ...       ...\n",
+      "1889  1890PT  20170407  20170408\n",
+      "1890  1891PT  20170426  20170429\n",
+      "1891  1892PT  20170410  20170412\n",
+      "1892  1893PT  20170408  20170411\n",
+      "1893  1894PT  20170412  20170413\n",
       "\n",
-      "[1894 rows x 2 columns]\n"
+      "[1894 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "columns_to_view = ['입원일자', '퇴원일자']\n",
+    "columns_to_view = ['환자ID','입원일자', '퇴원일자']\n",
     "df_view = df_ROS[columns_to_view]\n",
     "print(df_view)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a50b29b-bd09-4ccd-86d9-751903a25c34",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
