BMI 분석결과 추가

--- a/codes/pandass/ResurrenceOfSurgery_apply_quest.ipynb
+++ b/codes/pandass/ResurrenceOfSurgery_apply_quest.ipynb
@@ -987,9 +987,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6c493b1-fc1e-48a8-adf4-0a84ebeae551",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 분석결과 \n",
+    "\n",
+    "1.정상 체중 (Normal Weight) 범주에 속하는 환자가 가장 많았습니다. 총 1365명이 이 범주에 속하며, 정상 체중을 유지하고 있는 환자들이 대부분입니다.\n",
+    "\n",
+    "2.과체중 (Overweight) 범주에 속하는 환자가 428명으로 그 다음으로 많았습니다. 일부 환자들은 과체중에 해당되며, 신체적으로 더 많은 관리가 필요할 수 있습니다.\n",
+    "\n",
+    "3.비만 (Obese) 범주에 해당하는 환자는 63명으로 상대적으로 적은 수입니다. 하지만 이러한 환자들에게는 건강 상태를 관리하고 개선하기 위한 조치가 필요할 수 있습니다.\n",
+    "\n",
+    "4.저체중 (Underweight) 범주에 해당하는 환자는 38명으로 가장 적은 수입니다. 저체중 환자들 또한 신체적인 건강을 유지하고 개선하기 위한 적절한 접근 방법이 필요합니다.\n",
+    "\n",
+    "이러한 결과를 통해 환자들의 체중 분포와 비만도 상태를 파악할 수 있으며, 이를 토대로 건강 관리와 조치를 적절히 계획할 수 있습니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4e8aaa8-90ed-418f-bc36-256bb356f4a9",
+   "id": "26df3a8a-f189-498e-b1b5-9b7c776d19b1",
    "metadata": {},
    "outputs": [],
    "source": []
