--- a/codes/pandass/ResurrenceOfSurgery_apply_quest.ipynb
+++ b/codes/pandass/ResurrenceOfSurgery_apply_quest.ipynb
@@ -7,7 +7,13 @@
    "source": [
     "### quest\n",
     "- apply() : '신장', '체중' -> BMI\n",
-    "- BMI 시각화 및 인사이트"
+    "- BMI 시각화 및 인사이트\n",
+    "\n",
+    "- BMI = 체중(kg) / (신장(m) * 신장(m))\n",
+    "  저체중 (Underweight): BMI 18.5 미만\n",
+    "  정상 체중 (Normal Weight): BMI 18.5 - 24.9\n",
+    "  과체중 (Overweight): BMI 25 - 29.9\n",
+    "  비만 (Obese): BMI 30 이상"
    ]
   },
   {
@@ -684,7 +690,7 @@
    "source": [
     "# BMI 계산 함수\n",
     "def Calculate_BMI(row):\n",
-    "    height = float(row['신장']) / 100  # 신장을 미터로 변환\n",
+    "    height = float(row['신장']) / 100 \n",
     "    weight = float(row['체중'])\n",
     "    BMI = weight / (height * height)\n",
     "    return BMI"
@@ -959,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "id": "311348b2-9883-4208-bcf4-a49e3747f371",
    "metadata": {
     "tags": []
@@ -977,7 +983,7 @@
     }
    ],
    "source": [
-    "# BMI 분포를 막대 그래프로 시각화\n",
+    "# BMI 분포를 히스토그램으로 시각화\n",
     "\n",
     "sns.histplot(data=df_ROS_BMI, x='BMI_범주', color='skyblue')\n",
     "plt.title('BMI 범주별 환자 수')\n",
@@ -995,15 +1001,15 @@
    "source": [
     "### 분석결과 \n",
     "\n",
-    "1.정상 체중 범주에 속하는 환자가 가장 많았다. 총 1365명이 이 범주에 속하며, 정상 체중을 유지하고 있는 환자들이 대부분이다.\n",
+    "1. 정상 체중 범주에 속하는 환자가 가장 많았다. 총 1365명이 이 범주에 속하며, 정상 체중을 유지하고 있는 환자들이 대부분이다.\n",
     "\n",
-    "2.과체중 범주에 속하는 환자가 428명으로 그 다음으로 많았다. 일부 환자들은 과체중에 해당되며, 신체적으로 더 많은 관리가 필요할 수 있다. \n",
+    "2. 과체중 범주에 속하는 환자가 428명으로 그 다음으로 많았다. 일부 환자들은 과체중에 해당되며, 신체적으로 더 많은 관리가 필요할 수 있다. \n",
     "\n",
-    "3.비만 범주에 해당하는 환자는 63명으로 상대적으로 적은 수이다. 하지만 이러한 환자들에게는 건강 상태를 관리하고 개선하기 위한 조치가 필요할 수 있다.\n",
+    "3. 비만 범주에 해당하는 환자는 63명으로 상대적으로 적은 수이다. 하지만 이러한 환자들에게는 건강 상태를 관리하고 개선하기 위한 조치가 필요할 수 있다.\n",
     "\n",
-    "4.저체중 범주에 해당하는 환자는 38명으로 가장 적은 수이다. 저체중 환자들 또한 신체적인 건강을 유지하고 개선하기 위한 적절한 접근 방법이 필요할 수 있다.\n",
+    "4. 저체중 범주에 해당하는 환자는 38명으로 가장 적은 수이다. 저체중 환자들 또한 신체적인 건강을 유지하고 개선하기 위한 적절한 접근 방법이 필요할 수 있다.\n",
     "\n",
-    "결과를 통해 환자들의 체중 분포와 비만도 상태를 파악할 수 있으며, 이를 토대로 건강 관리와 조치를  계획할 수 있다. "
+    "   결과를 통해 환자들의 체중 분포와 비만도 상태를 파악할 수 있으며, 이를 토대로 건강 관리와 조치를  계획할 수 있다. "
    ]
   },
   {
