--- a/codes/pandass/ResurrenceOfSurgery_apply_quest.ipynb
+++ b/codes/pandass/ResurrenceOfSurgery_apply_quest.ipynb
@@ -688,7 +688,7 @@
    },
    "outputs": [],
    "source": [
-    "# BMI 계산 함수\n",
+    "# BMI 계산 함수, 신장 int -> float으로 Type casting\n",
     "def Calculate_BMI(row):\n",
     "    height = float(row['신장']) / 100 \n",
     "    weight = float(row['체중'])\n",
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "311348b2-9883-4208-bcf4-a49e3747f371",
    "metadata": {
     "tags": []
@@ -983,8 +983,7 @@
     }
    ],
    "source": [
-    "# BMI 분포를 히스토그램으로 시각화\n",
-    "\n",
+    "# BMI 시각화\n",
     "sns.histplot(data=df_ROS_BMI, x='BMI_범주', color='skyblue')\n",
     "plt.title('BMI 범주별 환자 수')\n",
     "plt.xlabel('BMI 범주')\n",
